[package]
name = "luban_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
uuid = { version = "0.8", features = ["v4"] }
hex = "0.4"
serde = "1.0"
serde_json = "1.0"

chrono = "*"
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
entity = { path = "./entity" }
migration = { path = "./migration" }
luban_schema = { path = "./core" }

[dependencies.sea-orm-rocket]
version = "0.5.2"


[dependencies.luban_core]
path = "../luban_core"