[package]
name = "luban_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
    "runtime-tokio-rustls", 
    # "sqlx-mysql",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.20.0"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
